<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Smart Remote</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Sony Telly</string>
    <string name="title_section2">Settings</string>








    <string name="hello_world"></string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Race Car</string>
    <string name="title_activity_device_picker">Select device</string>
    <string name="device">Device</string>
    <string name="no_device">Select a device</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="alert">Write alert level</string>
    <string name="scanning">Scanning for devices</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="menu_horn">Sound horn</string>
    <string name="menu_tv">TV Power</string>
    
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="title_devices">BLE Device Scan</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>

    <string name="unknown_device">Unknown device</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>

    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


</resources>
